# spidermonkey-NX

./: .gitattributes  .gitignore  README.md  build-switch.sh  build.sh  build_win.sh  mozconfig  mozconfig.switch
jsrust-switch/: Cargo.toml.template  build-jsrust-switch.sh  lib.rs  patch_nostd.py
jsrust-switch/intree-diffs/: intl_bidi_rust_unicode-bidi-ffi_Cargo.toml.diff  intl_bidi_rust_unicode-bidi-ffi_src_lib.rs.diff  js_src_rust_shared_lib.rs.diff  mozglue_static_rust_Cargo.toml.diff
mozjs-128.13.0/: Cargo.toml
mozjs-128.13.0/.cargo/: config.toml
mozjs-128.13.0/config/: run_spidermonkey_checks.py  system-headers.mozbuild
mozjs-128.13.0/intl/bidi/rust/unicode-bidi-ffi/: Cargo.toml
mozjs-128.13.0/intl/bidi/rust/unicode-bidi-ffi/src/: lib.rs
patches/: FixLibNames.diff  FixMacOSBuild.diff  FixPkgConfigDebug.diff  FixPython3_14.diff  FixRustLinkage.diff  SuppressDanglingPointerWarning.patch  patch.sh
patches/switch/: js_src_rust_Cargo.toml.patch  js_src_rust_lib.rs.patch  mozglue_static_rust_lib.rs.patch
switch-build/: build-all.sh  build-jsrust.sh  build-mozjs.sh  env.sh  make-nro.sh  patch_nostd.py
switch-build/debug/: patch_compress.py  patch_selfhost.py
switch-shims/: dlfcn.h  switch_jitmem.c  switch_jitmem.h  switch_libc_compat.c  switch_pthread_compat.h  switch_virtmem.c
switch-shims/asm/: hwcap.h
switch-shims/linux/: random.h  version.h
switch-shims/sys/: auxv.h  mman.h  prctl.h  syscall.h
switch-test/: Makefile  jstest.nacp
switch-test/source/: bindings.h  console.cpp  gfx.cpp  jstest.cpp  libnx.cpp  thread_affinity.c
(+33 files in other folders)
