[package]
name = "unicode-bidi-ffi"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Jonathan Kew <jkew@mozilla.com>"]
edition = "2021"

[dependencies]
unicode-bidi = { version = "0.3.15", default-features = false, features = ["smallvec", "hardcoded-data"] }
icu_properties = { version = "1.4.0", default-features = false, features = ["bidi", "compiled_data"] }
